# detit

./: .gitignore  README.md  coverage.lcov  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: linting.yml  tests.yml
docs/source/: conf.py  detit.rst  index.rst  introduction.rst  modules.rst
simulations/: requirements_simu.txt  simu_detit.ipynb  simu_detit.py  simu_logistic.ipynb  simu_logistic.py  simu_mnlogit.ipynb  simu_mnlogit.py  simulation_tools.py  tracing-and-logdet-tf.ipynb
src/detit/: data.py  models.py  quality.py  similarity.py
tests/: test_Dataset.py  test_Ensemble.py  test_Exponential.py  test_RBF.py  test_isDataset.py  test_makeTfDataset.py  test_toTensors.py
