# This setup.cfg file is based on basic content outlined in the link below
# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = detit
description = Determinantal choice modeling
author = Sander Aarts
license = MIT
platforms = unix, linux, osx, cygwin, win32

[options]
packages =
    detit
package_dir=
    =src
zip_safe = no
install_requres = 
	tensorflow-macos>=2
    numpy>=1.2
    scipy>=1.9
python_requires = >=3.8

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=3.0
    #mypy>=0.910
    flake8>=3.9
    six>=1.16
    tox>=3.0

#[options.package_data]
#loraplan = py.typed # Not currently using type-hinted code

[flake8]
max-line-length = 88
extend-ignore = E203